--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
   <title>Freehand</title>
 </head>
 <body>
-<!--head---------------->
-<div class="head">
-  <img src="images/Vector.svg" alt=""><span>Freehand</span>
-</div>
 
-
-<!--blocks-->
 
 <h2>Our Services</h2>
 <h1>We build experience</h1>
@@ -24,5 +18,153 @@
   <div class="item-block"></div>
   <div class="item-block"></div>
 </div>
+
+<body>
+<header>
+  <div class="logo">
+    <a href="/">
+      <div class="href">
+        <img src="./images/Vector (15).svg" alt="logo">
+        <h1 class="logo__header">Freehand</h1>
+      </div>
+    </a>
+  </div>
+</header>
+<main>
+  <div class="services">
+    <p class="services__about">OUR SERVICES</p>
+    <h2 class="services__header">We build experience</h2>
+    <ul class="services__list">
+      <li class="services__item content">
+        <ul class="content__menu">
+          <li class="content__item">
+            <div class="content__item--block">
+              <svg width="39" height="36" class="megaphone-blue">
+                <use href="./images/symbol-defs.svg#megaphone-blue"></use>
+              </svg>
+              <svg width="39" height="36" class="megaphone-green">
+                <use href="./images/symbol-defs.svg#megaphone-green"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="content__item">
+            <h3 class="content__header">
+              Design
+            </h3>
+          </li>
+          <li class="content__item">
+            <p class="content__paragraph">
+              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+            </p>
+          </li>
+          <li class="content__item">
+            <a href="/" class="content__ref">Learn more</a>
+          </li>
+        </ul>
+      </li>
+      <li class="services__item">
+        <ul class="content__menu">
+          <li class="content__item">
+            <div class="content__item--block">
+              <svg width="39" height="36" class="building-blue">
+                <use href="./images/symbol-defs.svg#building-blue"></use>
+              </svg>
+              <svg width="39" height="36" class="building-green">
+                <use href="./images/symbol-defs.svg#building-green"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="content__item">
+            <h3 class="content__header">
+              Ecommerce
+            </h3>
+          </li>
+          <li class="content__item">
+            <p class="content__paragraph">
+              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+            </p>
+          </li>
+          <li class="content__item">
+            <a href="/" class="content__ref">Learn more</a>
+          </li>
+        </ul>
+      </li>
+      <li class="services__item">
+        <ul class="content__menu">
+          <li class="content__item">
+            <div class="content__item--block">
+              <svg width="24" height="36" class="phone-blue">
+                <use href="./images/symbol-defs.svg#phone-blue"></use>
+              </svg>
+              <svg width="24" height="36" class="phone-green">
+                <use href="./images/symbol-defs.svg#phone-green"></use>
+              </svg>
+            </div>
+          </li>
+          <li class="content__item">
+            <h3 class="content__header">
+              Application
+            </h3>
+          </li>
+          <li class="content__item">
+            <p class="content__paragraph">
+              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+            </p>
+          </li>
+          <li class="content__item">
+            <a href="/" class="content__ref">Learn more</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+</main>
+<footer>
+  <div class="footer">
+    <a href="/">
+      <div class="footer-logo">
+        <img src="./images/Vector (16).svg" alt="logo">
+        <h1 class="footer-logo__header">Freehand</h1>
+      </div>
+    </a>
+    <ul class="footer__social">
+      <a href="https://www.instagram.com/" target="_blank">
+        <li class="footer__item">
+          <svg width="20" height="20">
+            <use href="./images/symbol-defs.svg#instagram-icon"></use>
+          </svg>
+        </li>
+      </a>
+      <a href="https://uk-ua.facebook.com/" target="_blank">
+        <li class="footer__item">
+          <svg width="10" height="18">
+            <use href="./images/symbol-defs.svg#facebook-icon"></use>
+          </svg>
+        </li>
+      </a>
+      <a href="https://github.com/" target="_blank">
+        <li class="footer__item">
+          <svg width="20" height="20">
+            <use href="./images/symbol-defs.svg#github-icon"></use>
+          </svg>
+        </li>
+      </a>
+      <a href="https://dribbble.com/" target="_blank">
+        <li class="footer__item">
+          <svg width="20" height="20">
+            <use href="./images/symbol-defs.svg#dribbble-icon"></use>
+          </svg>
+        </li>
+      </a>
+      <a href="https://twitter.com/" target="_blank">
+        <li class="footer__item">
+          <svg width="20" height="16">
+            <use href="./images/symbol-defs.svg#twitter-icon"></use>
+          </svg>
+        </li>
+      </a>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
