--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./style/reset.css">
   <link rel="stylesheet" href="style/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&family=Quicksand:wght@500&family=Roboto:wght@500;700&display=swap"
+    rel="stylesheet">
   <title>Freehand</title>
 </head>
 <body>
 
-
-<h2>Our Services</h2>
-<h1>We build experience</h1>
 <div class="item">
   <div class="item-block"></div>
   <div class="item-block"></div>
   <div class="item-block"></div>
 </div>
 
-<body>
 <header>
   <div class="logo">
     <a href="/">
@@ -54,7 +56,8 @@
           </li>
           <li class="content__item">
             <p class="content__paragraph">
-              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros
+              .
             </p>
           </li>
           <li class="content__item">
@@ -81,7 +84,8 @@
           </li>
           <li class="content__item">
             <p class="content__paragraph">
-              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros
+              .
             </p>
           </li>
           <li class="content__item">
@@ -108,7 +112,8 @@
           </li>
           <li class="content__item">
             <p class="content__paragraph">
-              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .
+              Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros
+              .
             </p>
           </li>
           <li class="content__item">
